# desafio-api-bancaria-fastapi

./: .gitignore  README.md  pyproject.toml
app/: banco.db  main.py  models.py
app/core/: database.py  settings.py
app/routers/: accounts.py  auth.py  transactions.py
app/schemas/: accounts.py  auth.py  transactions.py
app/services/: security.py
